# Pictopy-tauri-dev

./: .gitignore  package-lock.json  package.json
backend/: main.py  requirments.txt  run.bat
backend/app/database/: albums.db  images.db
backend/app/routes/: images.py  test.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  folders_cache.txt  images_cache.txt  tauri.conf.json  videos_cache.txt
frontend/src-tauri/capabilities/: migrated.json
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/services/: cache_service.rs  mod.rs
frontend/src/components/: Main.tsx  Navbar.tsx  Photos.tsx  Test.tsx  bassam.tsx  bigview.tsx  one.tsx  routes.tsx
frontend/src/components/AITagging/: AIgallery.tsx  FilterControls.tsx
frontend/src/components/Album/: Album.tsx  AlbumDialog.tsx  AlbumForm.tsx  AlbumList.tsx  AlbumManger.tsx  AlbumView.tsx  Albumview.tsx  Error.tsx  ImageManagementDialog.tsx  ImageSelection.tsx
frontend/src/components/FolderPicker/: FolderPicker.tsx
frontend/src/features/: Photogallery.tsx  Settings.tsx  Video.tsx
frontend/src/hooks/: AI_Image.ts  AlbumService.ts  UseVideos.ts  useImages.ts
frontend/src/layout/: Layout.tsx  main.tsx
frontend/src/pages/: Dashboard.tsx  Init.tsx  Photos.tsx  Photos_Page.tsx  Settings_page.tsx  VideoPage.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/types/: Album.ts  Media.ts  image.ts  video.ts
frontend/src/utils/: imageUtils.ts  videoUtils.ts
(+41 files in other folders)
